--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ packages = [{include = "homework_drf"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^4.2.5"
+djangorestframework = "^3.14.0"
+pillow = "^10.0.0"
+psycopg2-binary = "^2.9.7"
 
 
 [build-system]
