--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.14.0"
 pillow = "^10.0.0"
 psycopg2-binary = "^2.9.7"
 django-filter = "^23.2"
+djangorestframework-simplejwt = "^5.3.0"
 
 
 [build-system]
