--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pillow = "^10.0.0"
 psycopg2-binary = "^2.9.7"
 django-filter = "^23.2"
 djangorestframework-simplejwt = "^5.3.0"
+drf-yasg = "^1.21.7"
 
 
 [build-system]
