--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2-binary = "^2.9.7"
 django-filter = "^23.2"
 djangorestframework-simplejwt = "^5.3.0"
 drf-yasg = "^1.21.7"
+requests = "^2.31.0"
 
 
 [build-system]
