--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ django-filter = "^23.2"
 djangorestframework-simplejwt = "^5.3.0"
 drf-yasg = "^1.21.7"
 requests = "^2.31.0"
+celery = "^5.3.4"
+redis = "^5.0.0"
 
 
 [build-system]
