--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
   app:
     build: .
     tty: true
-    command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000"
     ports:
       - '8001:8000'
     volumes:
@@ -49,6 +49,7 @@ services:
     command: celery -A config worker -l INFO
     depends_on:
       - redis
+      - db
       - app
 
   # CELERY-BEAT
@@ -59,6 +60,7 @@ services:
     command: celery -A config beat -l INFO -S django
     depends_on:
       - redis
+      - db
       - app
 
 
